Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <li>CO-OWNER: @rubendml</li>
       <li>MANAGER: @iamnotnevend</li>
       <li>STAFF: @dxsq1 / @salado_xl / @sebastianyt724 / @user99990s</li>
-      <li>DEVELOPERS: @eldext / @zshadow_sad / @mateocollar_</li>
+      <li>DEVELOPERS: @mateocollar_</li>
     </ul>
   </section>
 
