Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <li>OWNER: @louteee. / @folwamdexby</li>
       <li>CO-OWNER: @rubendml</li>
       <li>MANAGER: @iamnotnevend</li>
-      <li>STAFF: @dxsq1 / @salado_xl / @sebastianyt724 / @user99990s</li>
+      <li>STAFF: APPLYS SOON...</li>
       <li>DEVELOPERS: @mateocollar_</li>
     </ul>
   </section>
