Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <section id="inicio">
     <h1>Bienvenidos a Zelux Network</h1>
     <p>El mejor servidor para jugar en MCPE con diversión, comunidad y muchas modalidades.</p>
-    <a href="changelogs.html" class="btn-changelog">Ver Changelogs</a>
+    <a href="changelogs.html" class="btn-special">Ver Changelogs</a>
+
+<a href="announces.html" class="btn-special">Anuncios</a>
   </section>
 
   <section id="info">
