Actualizar announces.html

--- a/announces.html
+++ b/announces.html
@@ -18,25 +18,13 @@
 
   <main>
     <section class="anuncio">
-      <h2 onclick="toggleAnuncio(this)">¡Nuevo modo: Lucky Wars!</h2>
+      <h2 onclick="toggleAnuncio(this)">Click ME</h2>
       <div class="contenido">
-        <p>Ya está disponible Lucky Wars en el servidor. ¡Probalo ahora y obtené recompensas exclusivas!</p>
+        <p>Nada por ahora...</p>
       </div>
     </section>
 
-    <section class="anuncio">
-      <h2 onclick="toggleAnuncio(this)">Evento PvP este sábado</h2>
-      <div class="contenido">
-        <p>Este sábado a las 18:00 hs se hará un torneo PvP con premios. ¡No faltes!</p>
-      </div>
-    </section>
-
-    <section class="anuncio">
-      <h2 onclick="toggleAnuncio(this)">Sugerencias abiertas</h2>
-      <div class="contenido">
-        <p>Podés dejar tus ideas para el servidor en el canal de Discord #sugerencias. ¡Queremos leerte!</p>
-      </div>
-    </section>
+    
   </main>
 
   <footer>
