Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <h1>Bienvenidos a Zelux Network</h1>
     <p>El mejor servidor para jugar en MCPE con diversión, comunidad y muchas modalidades.</p>
     <a href="changelogs.html" class="btn-special">Ver Changelogs</a>
-
-<a href="announces.html" class="btn-special">Anuncios</a>
+    <a href="announces.html" class="btn-special">Anuncios</a>
   </section>
 
   <section id="info">
@@ -44,7 +43,7 @@
   <section id="tienda">
     <h2>Tienda</h2>
     <p>Compra artículos exclusivos y apoya al servidor.</p>
-    <a href="https://zeluxstore.tebex.io/" target="_blank">Visitar Tienda</a>
+    <a href="https://zeluxstore.tebex.io/" class="btn-special" target="_blank">Visitar Tienda</a>
   </section>
 
   <section id="staff">
@@ -62,13 +61,13 @@
   <section id="discord">
     <h2>Discord</h2>
     <p>Únete a nuestra comunidad en Discord para charlar, soporte y eventos.</p>
-    <a href="https://discord.gg/7MQmvKGRTA" target="_blank">Entrar al Discord</a>
+    <a href="https://discord.gg/7MQmvKGRTA" class="btn-special" target="_blank">Entrar al Discord</a>
   </section>
 
   <section id="soporte">
     <h2>Soporte</h2>
     <p>¿Necesitas ayuda? Contacta con nuestro equipo de soporte.</p>
-    <a href="https://www.facebook.com/profile.php?id=61563431408185" target="_blank">Solicitar Soporte</a>
+    <a href="https://www.facebook.com/profile.php?id=61563431408185" class="btn-special" target="_blank">Solicitar Soporte</a>
   </section>
 
   <footer>
