Actualizar announces.html

--- a/announces.html
+++ b/announces.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="anc.css" />
 </head>
 <body>
+
   <header>
     <h1>Anuncios Oficiales</h1>
     <nav>
@@ -18,18 +19,23 @@
 
   <main>
     <section class="anuncio">
-      <h2 onclick="toggleAnuncio(this)">Click ME</h2>
+      <h2 onclick="toggleAnuncio(this)">¡Primer anuncio oficial!</h2>
       <div class="contenido">
-        <p>Nada por ahora...</p>
+        <p>Nada por ahora... pero muy pronto habrá novedades importantes para Zelux Network.</p>
       </div>
     </section>
 
-    
+    <section class="anuncio">
+      <h2 onclick="toggleAnuncio(this)">MLG BLOCK: ¡Actualización muy cerca!</h2>
+      <div class="contenido">
+        <p>Se vienen nuevas funciones en el modo MLG BLOCK. ¿Estás preparado para nuevos desafíos?</p>
+      </div>
+    </section>
   </main>
 
   <footer>
     Página web desarrollada por: Gravitus47<br>
-    Discord: mateocollar_<br>
+    Discord: <a href="https://discord.com/users/1141009113799979008" target="_blank">mateocollar_</a><br>
     GitHub: <a href="https://github.com/mateocollar" target="_blank">mateocollar</a>
   </footer>
 
